--- a/Readings/Birth Chart Report/purchase birth chart report/styles.css
+++ b/Readings/Birth Chart Report/purchase birth chart report/styles.css
@@ -28,12 +28,7 @@ nav {
 .birth-chart-report p {
     margin-right: 10px;
     margin-left: 30px;
-    margin-bottom: 20px;
-}
-
-.birth-chart-report .buy-button {
-    display: inline-block;
-    margin: 10px 0 20px 30px;
+    margin-bottom: 10px;
 }
 
 .birth-chart-report a {
@@ -49,31 +44,10 @@ nav {
         margin-left: 85px;
     }
 
-    .birth-chart-report .buy-button {
+    .birth-chart-report a {
         margin-left: 85px;
     }
 }
-
-@media (max-width: 400px) {
-    .button-container {
-        display: flex;
-        justify-content: center;
-    }
-
-    .birth-chart-report a, .buy-button {
-        margin: 10px 0 20px 0;
-    }
-
-    .birth-chart-report p {
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-
-    .birth-chart-details p {
-        margin-right: 30px;
-    }
-}
-
 
 .birth-chart-details {
     margin: 0 0 10px 0;
@@ -110,7 +84,7 @@ nav {
 }
 
 .free-consultation h3 {
-    margin: 0 30px 20px 30px;
+    margin: 0 0 20px 0;
 }
 
 .free-consultation p {
