--- a/Readings/Birth Chart Report/styles.css
+++ b/Readings/Birth Chart Report/styles.css
@@ -28,25 +28,25 @@ nav {
 .birth-chart-report p {
     margin-right: 10px;
     margin-left: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-.birth-chart-report a {
+.buy-button {
+    display: inline-block;
+    width: 100px;
+}
+
+.example-chart {
+    margin-top: 10px;
+}
+
+.report-description {
+    margin-bottom: 20px;
+}
+
+.birth-chart-report a, .buy-button {
     margin: 10px 0 20px 30px;
-}
-
-@media (min-width: 844px) {
-    .birth-chart-report h1 {
-        margin-left: 85px;
-    }
-
-    .birth-chart-report p {
-        margin-left: 85px;
-    }
-
-    .birth-chart-report a {
-        margin-left: 85px;
-    }
+    width: 290px;
 }
 
 .birth-chart-details {
@@ -74,6 +74,40 @@ nav {
     }
 }
 
+@media (max-width: 400px) {
+    .button-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .birth-chart-report a, .buy-button {
+        margin: 10px 0 20px 0;
+    }
+
+    .birth-chart-report p {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .birth-chart-details p {
+        margin-right: 30px;
+    }
+}
+
+@media (min-width: 844px) {
+    .birth-chart-report h1 {
+        margin-left: 85px;
+    }
+
+    .birth-chart-report p {
+        margin-left: 85px;
+    }
+
+    .birth-chart-report a, .buy-button {
+        margin-left: 85px;
+    }
+}
+
 .free-consultation {
     background-image: url(../../Images/BackgroundCrop.jpg);
     background-size: cover;
@@ -84,7 +118,7 @@ nav {
 }
 
 .free-consultation h3 {
-    margin: 0 0 20px 0;
+    margin: 0 30px 20px 30px;
 }
 
 .free-consultation p {
