--- a/Readings/Predictive Report/styles.css
+++ b/Readings/Predictive Report/styles.css
@@ -28,11 +28,22 @@ nav {
 .birth-chart-report p {
     margin-right: 10px;
     margin-left: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-.birth-chart-report a {
+.birth-chart-report a, .buy-button {
+    display: inline-block;
     margin: 10px 0 20px 30px;
+    width: 290px;
+}
+
+@media (max-width: 576px) {
+    .button-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .buy
 }
 
 @media (min-width: 844px) {
@@ -44,7 +55,7 @@ nav {
         margin-left: 85px;
     }
 
-    .birth-chart-report a {
+    .birth-chart-report a, .buy-button {
         margin-left: 85px;
     }
 }
@@ -84,7 +95,7 @@ nav {
 }
 
 .free-consultation h3 {
-    margin: 0 0 20px 0;
+    margin: 0 30px 20px 30px;
 }
 
 .free-consultation p {
