--- a/Readings/Predictive Report/styles.css
+++ b/Readings/Predictive Report/styles.css
@@ -37,13 +37,15 @@ nav {
     width: 290px;
 }
 
-@media (max-width: 576px) {
-    .button-container {
-        display: flex;
-        justify-content: center;
+@media (max-width: 400px) {
+    .birth-chart-report p {
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
-    .buy
+    .birth-chart-details p {
+        margin-right: 30px;
+    }
 }
 
 @media (min-width: 844px) {
