--- a/Readings/Zoom Reading/styles.css
+++ b/Readings/Zoom Reading/styles.css
@@ -47,6 +47,14 @@ nav {
     .birth-chart-report a {
         margin-left: 85px;
     }
+
+    .button {
+        margin-left: 55px;
+    }
+}
+
+.book-button {
+    margin: 30px 0 0 30px;
 }
 
 .birth-chart-details {
