--- a/The 12th House/Moon in the 12th House/styles.css
+++ b/The 12th House/Moon in the 12th House/styles.css
@@ -16,115 +16,113 @@ nav {
     }
 }
 
-.header img {
-    width: 100%;
-    height: auto;
+.header {
+    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-size: cover;
 }
 
-.sun-in-the-12th {
+.header img {
+    width: 25vw;
+    height: 25vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.moon-in-the-12th {
     padding: 30px 0 20px 0;
 }
 
-.sun-in-the-12th .title-img {
+.moon-in-the-12th .title-img {
     width: 10rem;
     height: 10rem;
     float: left;
     margin: 5px 20px 5px 30px;
 }
 
-.sun-in-the-12th h1 {
-    margin: 0 30px 10px 30px;
+.moon-in-the-12th h1 {
+    margin: 0 0 10px 30px;
 }
 
-.sun-in-the-12th .date {
+.moon-in-the-12th .date {
     font-size: .9rem;
     margin-left: 30px;
 }
 
-.sun-in-the-12th p {
+.moon-in-the-12th p {
     margin-right: 30px;
     margin-left: 30px;
 }
 
-.sun-in-the-12th h2 {
+.moon-in-the-12th h2 {
     margin: 30px 0 20px 30px;
 }
 
-.sun-in-the-12th img {
+.moon-in-the-12th h3 {
+    margin: 30px 0 15px 30px;
+}
+
+.moon-in-the-12th img {
     width: 100%;
     height: auto;
 }
 
-@media (min-width: 844px) {
-    .sun-in-the-12th .title-img {
-        margin-left: 100px;
-    }
-
-    .sun-in-the-12th p {
-        margin-right: 100px;
-        margin-left: 100px;
-    }
-
-    .sun-in-the-12th h2 {
-        margin-left: 100px;
-    }
+.text-img {
+    margin: 10px 0 20px 0;
 }
 
 @media (min-width: 768px) {
-    .sun-in-the-12th img {
+    .moon-in-the-12th img {
         width: 500px;
-        margin-left: 100px;
+        margin-left: 30px;
         margin-top: 10px;
     }
 }
 
-.free-consultation {
+@media (min-width: 844px) {
+    .moon-in-the-12th .title-img {
+        margin-left: 100px;
+    }
+
+    .moon-in-the-12th p {
+        margin-right: 100px;
+        margin-left: 100px;
+    }
+
+    .moon-in-the-12th h2 {
+        margin-left: 100px;
+    }
+
+    .moon-in-the-12th h3 {
+        margin-left: 100px;
+    }
+
+    .moon-in-the-12th img {
+        margin-left: 100px;
+    }
+}
+
+.do-you-have {
+    padding: 40px 0 40px 0;
     background-image: url(../../Images/BackgroundCrop.jpg);
     background-size: cover;
-    margin: 30px 0 30px 0;
     color: #fff;
-    padding: 40px 0 40px 0;
-    text-align: center;
 }
 
-.free-consultation h3 {
-    margin: 0 30px 20px 30px;
+.do-you-have h2 {
+    margin: 0 0 20px 0;
 }
 
-.free-consultation p {
-    margin: 0 30px 0 30px;
+.do-you-have p {
+    margin-left: 0;
 }
 
-.free-consultation a {
+.do-you-have a {
     margin: 20px 0 0 0;
 }
 
-@media (min-width: 768px) {
-    .free-consultation p {
-        margin-right: 150px;
-        margin-left: 150px;
-    }
-}
-
-@media (min-width: 992px) {
-    .free-consultation p {
-        margin-right: 250px;
-        margin-left: 250px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .free-consultation p {
-        margin-right: 350px;
-        margin-left: 350px;
-    }
-}
-
-@media (min-width: 1400px) {
-    .free-consultation p {
-        margin-right: 450px;
-        margin-left: 450px;
-    }
+.do-you-have-cont {
+    text-align: center;
 }
 
 footer {
