--- a/Articles/styles.css
+++ b/Articles/styles.css
@@ -16,6 +16,26 @@ nav {
     }
 }
 
+@media (min-width: 1100px) {
+    .navbar-brand {
+        margin-left: 180px;
+    }
+
+    .navbar-toggler {
+        margin-right: 180px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .navbar-brand {
+        margin-left: 280px;
+    }
+
+    .navbar-toggler {
+        margin-right: 280px;
+    }
+}
+
 h1 {
     margin-left: 15px;
 }
@@ -93,6 +113,38 @@ h1 {
     .article-2 {
         margin-left: 58px;
         margin-right: 58px;
+    }
+}
+
+@media (min-width: 1100px) {
+    h1 {
+        margin-left: 200px;
+    }
+
+    .article-1 {
+        margin-left: 158px;
+        margin-right: 158px;
+    }
+
+    .article-2 {
+        margin-left: 158px;
+        margin-right: 158px;
+    }
+}
+
+@media (min-width: 1400px) {
+    h1 {
+        margin-left: 300px;
+    }
+
+    .article-1 {
+        margin-left: 258px;
+        margin-right: 258px;
+    }
+
+    .article-2 {
+        margin-left: 258px;
+        margin-right: 258px;
     }
 }
 
