--- a/The 12th House/Sun in the 12th House/styles.css
+++ b/The 12th House/Sun in the 12th House/styles.css
@@ -16,6 +16,26 @@ nav {
     }
 }
 
+@media (min-width: 1100px) {
+    .navbar-brand {
+        margin-left: 180px;
+    }
+
+    .navbar-toggler {
+        margin-right: 180px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .navbar-brand {
+        margin-left: 280px;
+    }
+
+    .navbar-toggler {
+        margin-right: 280px;
+    }
+}
+
 .header {
     background-image: url(../../Images/BackgroundCrop.jpg);
     background-size: cover;
@@ -63,6 +83,14 @@ nav {
     height: auto;
 }
 
+@media (min-width: 768px) {
+    .sun-in-the-12th img {
+        width: 500px;
+        margin-left: 100px;
+        margin-top: 10px;
+    }
+}
+
 @media (min-width: 844px) {
     .sun-in-the-12th .title-img {
         margin-left: 100px;
@@ -78,11 +106,53 @@ nav {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1100px) {
+    .sun-in-the-12th .title-img {
+        margin-left: 200px;
+    }
+
+    .sun-in-the-12th p {
+        margin-right: 200px;
+        margin-left: 200px;
+    }
+
+    .sun-in-the-12th h2 {
+        margin-left: 200px;
+    }
+
+    .sun-in-the-12th h3 {
+        margin-left: 200px;
+    }
+
     .sun-in-the-12th img {
-        width: 500px;
-        margin-left: 100px;
-        margin-top: 10px;
+        margin-left: 200px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .sun-in-the-12th .title-img {
+        margin-left: 300px;
+    }
+
+    .sun-in-the-12th h1 {
+        margin-right: 300px;
+    }
+
+    .sun-in-the-12th p {
+        margin-right: 300px;
+        margin-left: 300px;
+    }
+
+    .sun-in-the-12th h2 {
+        margin-left: 300px;
+    }
+
+    .sun-in-the-12th h3 {
+        margin-left: 300px;
+    }
+
+    .sun-in-the-12th img {
+        margin-left: 300px;
     }
 }
 
