--- a/readings/styles.css
+++ b/readings/styles.css
@@ -31,7 +31,7 @@ nav {
     align-items: center;
     flex-wrap: wrap;
     gap: 40px;
-    background-image: url(../Images/Carousel.jpg);
+    background-image: url(../images/Carousel.jpg);
     background-size: cover;
     padding: 40px 0 30px 0;
 }
