--- a/the-12th-house/moon/styles.css
+++ b/the-12th-house/moon/styles.css
@@ -37,7 +37,7 @@ nav {
 }
 
 .header {
-    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-image: url(../../images/BackgroundCrop.jpg);
     background-size: cover;
 }
 
@@ -179,7 +179,7 @@ nav {
 
 .do-you-have {
     padding: 40px 0 40px 0;
-    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-image: url(../../images/BackgroundCrop.jpg);
     background-size: cover;
     color: #fff;
 }
