--- a/the-12th-house/understanding/styles.css
+++ b/the-12th-house/understanding/styles.css
@@ -121,7 +121,7 @@ nav {
 
 .good-fit {
     margin: 0 0 20px 0;
-    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-image: url(../../images/BackgroundCrop.jpg);
     background-size: cover;
     color: #fff;
     padding: 30px 0 40px 0;
