Fixed image path

--- a/readings/relationship/styles.css
+++ b/readings/relationship/styles.css
@@ -93,7 +93,7 @@ nav {
 }
 
 .free-consultation {
-    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-image: url(../../images/BackgroundCrop.jpg);
     background-size: cover;
     margin: 30px 0 30px 0;
     color: #fff;
