--- a/readings/predictive/styles.css
+++ b/readings/predictive/styles.css
@@ -88,7 +88,7 @@ nav {
 }
 
 .free-consultation {
-    background-image: url(../../Images/BackgroundCrop.jpg);
+    background-image: url(../../images/BackgroundCrop.jpg);
     background-size: cover;
     margin: 30px 0 30px 0;
     color: #fff;
